--- a/myapp/templates/account/login.html
+++ b/myapp/templates/account/login.html
@@ -37,7 +37,7 @@
         </button>
         <div class="offcanvas offcanvas-end" tabindex = "-1" id="navbarSupportedContent" aria-labelledby="offcanvasNavbarLabel">
           <div class="offcanvas-header" style = "text-align: center">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel" style = "font-family: Merriweather;">Navigation Menu</h5>
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Navigation Menu</h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class = "offcanvas-body"> 
@@ -50,12 +50,26 @@
 </header>
 {# Display django.contrib.messages as Bootstrap alerts #}
 {% bootstrap_messages %}
-
+<head>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Merriweather:wght@900&family=Montserrat:wght@200&family=Roboto:ital,wght@1,300&family=Sacramento&display=swap">
+  <link rel="stylesheet" href="{% static 'myapp/style.css' %}">
+  <style>
+    *{
+      font-weight: bolder !important;
+      font-family: 'Montserrat';
+      font-display: swap;
+      src: url(https://fonts.gstatic.com/s/montserrat/v25/JTUHjIg1_i6t8kCHKm4532VJOt5-QNFgpCvr6Hw3aXpsog.woff2) format('woff2');
+    }
+    .alert-messages {
+      font-weight: bolder !important;
+    }
+  </style>
+</head>
 <body class="banner">
   <div id="splashPageText">
     <div id="innerSplashPageBoxLogInScreen">
       
-        <div class = "title" style = "text-align: center;font-weight: bolder;font-size: 35px;font-family: Merriweather;"> Sign In </div>
+        <div class = "title" style = "text-align: center;font-size: 35px;"> Sign In </div>
         <!-- <h1 class = "signInAndUpTextOnLoginAndSignUpPages">{% trans "Sign In" %}</h1> -->
         <br>
         {% get_providers as socialaccount_providers %}
@@ -70,12 +84,12 @@
             <div style="margin: 15px 15px 15px 15px;">
               <center>
               <h4 style = "font-family: Montserrat; font-size: 20px; font-weight: bold;"> If you don't have an account {% endblocktrans %}</h4>
-              <button class = "btn btn-dark btn-lg"> <a style = "font-family: Merriweather; text-decoration: none; color: inherit;color: white; font-weight: bold;" href="{{ signup_url }}">Sign Up</a></button>
+              <button class = "btn btn-dark btn-lg"> <a style = "text-decoration: none; color: inherit;color: white; font-weight: bold;" href="{{ signup_url }}">Sign Up</a></button>
               <br>
               <br>
               <h4 style = "font-family: Montserrat;font-size: 20px; font-weight: bold;"> Or, login with Google</h4>
               <!-- <h4 style = "font-family: Montserrat; text-align: center;font-size: 20px">Sign in using {% include "socialaccount/snippets/provider_list.html" with process="login" %} </h4> -->
-              <button class = "btn btn-dark btn-lg"> <a style = "font-family: Merriweather; text-decoration: none; color: inherit;color: white; font-weight: bold;" href="/accounts/google/login/?process=login">Google</a></button>
+              <button class = "btn btn-dark btn-lg"> <a style = "text-decoration: none; color: inherit;color: white; font-weight: bold;" href="/accounts/google/login/?process=login">Google</a></button>
               <!-- <br>
               <h4 style = "font-family: Montserrat; text-align: center;font-size: 20px"> Or you can login below </h4>-->
               <!-- <div class="login-or">{% trans 'or' %}</div> -->
@@ -85,7 +99,7 @@
 
           <div style = "border: 2px solid black; margin-top: 50px; text-align: center;">
             <div style="margin: 15px 15px 15px 15px;">
-              <h3 style = "font-weight: bolder; font-size: 25px; font-family: Merriweather;">Login</h3>
+              <h3 style = "font-weight: bolder; font-size: 25px;">Login</h3>
                 <form class="login" method="POST" style = "font-family: Montserrat; text-align: center; font-size: 20px;margin-top: 4px;"{% url 'account_login' %}>
                   {% csrf_token %}
                   {{ form.as_p }}
@@ -95,7 +109,7 @@
                   <a class="button secondaryAction" href = {% url 'account_reset_password' %} > {% trans "Forgot Password?" %}</a>
                   <br>
                   <br>
-                  <button class="btn btn-dark btn-lg" type="submit" style = "font-family: Merriweather; text-decoration: none; color: inherit;color: white; font-weight: bold;">{% trans "Sign In" %}</button>
+                  <button class="btn btn-dark btn-lg" type="submit" style = "text-decoration: none; color: inherit;color: white; font-weight: bold;">{% trans "Sign In" %}</button>
                   
                 </form>
                 {% include "socialaccount/snippets/login_extra.html" %}
