--- a/myapp/templates/myapp/base.html
+++ b/myapp/templates/myapp/base.html
@@ -22,6 +22,7 @@
   <link rel="stylesheet" href="{% static 'myapp/style.css' %}">
   <style>
     a{
+      font-weight: bolder !important;
       font-family: 'Montserrat';
       font-display: swap;
       src: url(https://fonts.gstatic.com/s/montserrat/v25/JTUHjIg1_i6t8kCHKm4532VJOt5-QNFgpCvr6Hw3aXpsog.woff2) format('woff2');
@@ -36,29 +37,29 @@
         <div class="container-fluid">
           <a href="/"><img id = "rontundaImage" class = "image" src ="https://upload.wikimedia.org/wikipedia/commons/d/dd/University_of_Virginia_Rotunda_logo.svg"></a>
 
-          <a id="navLogo" class="navbar-brand" style = "font-family: Montserrat;
+          <a id="navLogo" class="navbar-brand" style = "
           color: black; font-size: 30px; padding-left: 5px; font-weight: bolder;" href="/accounts/profile">Schedule Advisor</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#navbarSupportedContent" aria-controls="offcanvasNavbar">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="offcanvas offcanvas-end" tabindex = "-1" id="navbarSupportedContent" aria-labelledby="offcanvasNavbarLabel">
             <div class="offcanvas-header" style = "text-align: center">
-              <h5 class="offcanvas-title" id="offcanvasNavbarLabel" style = "font-family: Merriweather;">Navigation Menu</h5>
+              <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Navigation Menu</h5>
               <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class = "offcanvas-body"> 
               <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link" aria-current="page" style = "font-family: Montserrat Black;font-size: 20px; font-weight: normal;" href="/accounts/profile/">Home</a>
+                  <a class="nav-link" aria-current="page" style = "font-size: 20px; font-weight: normal;" href="/accounts/profile/">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" style = "font-family: Montserrat Black;font-size: 20px; font-weight: normal;" href="/accounts/profile/browse_courses">Browse Courses</a>
+                  <a class="nav-link" style = "font-size: 20px; font-weight: normal;" href="/accounts/profile/browse_courses">Browse Courses</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" style = "font-family: Montserrat Black;font-size: 20px; font-weight: normal;" href="/accounts/profile/shopping_cart">Shopping Cart</a>
+                  <a class="nav-link" style = "font-size: 20px; font-weight: normal;" href="/accounts/profile/shopping_cart">Shopping Cart</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" style = "font-family: Montserrat Black;font-size: 20px; font-weight: normal;" href="/accounts/profile/calendar">Calendar</a>
+                  <a class="nav-link" style = "font-size: 20px; font-weight: normal;" href="/accounts/profile/calendar">Calendar</a>
                 </li>
                 <li class = "nav-item"> 
                   {% if user.is_authenticated %}
