--- a/myapp/templates/myapp/base.html
+++ b/myapp/templates/myapp/base.html
@@ -50,16 +50,16 @@
             <div class = "offcanvas-body"> 
               <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link" aria-current="page" style = "font-size: 20px; font-weight: normal;" href="/accounts/profile/">Home</a>
+                  <a class="nav-link" aria-current="page" style = "font-size: 20px;" href="/accounts/profile/">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" style = "font-size: 20px; font-weight: normal;" href="/accounts/profile/browse_courses">Browse Courses</a>
+                  <a class="nav-link" style = "font-size: 20px;" href="/accounts/profile/browse_courses">Browse Courses</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" style = "font-size: 20px; font-weight: normal;" href="/accounts/profile/shopping_cart">Shopping Cart</a>
+                  <a class="nav-link" style = "font-size: 20px;" href="/accounts/profile/shopping_cart">Shopping Cart</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" style = "font-size: 20px; font-weight: normal;" href="/accounts/profile/calendar">Calendar</a>
+                  <a class="nav-link" style = "font-size: 20px;" href="/accounts/profile/calendar">Calendar</a>
                 </li>
                 <li class = "nav-item"> 
                   {% if user.is_authenticated %}
