--- a/myapp/templates/myapp/courses.html
+++ b/myapp/templates/myapp/courses.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Merriweather:wght@900&family=Montserrat:wght@200&family=Roboto:ital,wght@1,300&family=Sacramento&display=swap">
   <link rel="stylesheet" href="{% static 'myapp/style.css' %}">
   <style>
-    h1,h2,h3,h4,h5,h6,button,select,option,table,th,td{
+    h1,h2,h3,h4,h5,h6,button,select,option,table,th,td,a{
       font-weight: bolder !important;
       font-family: 'Montserrat';
       font-display: swap;
