--- a/myapp/templates/account/login.html
+++ b/myapp/templates/account/login.html
@@ -75,25 +75,14 @@
         {% get_providers as socialaccount_providers %}
 
         {% if socialaccount_providers %}
-        <!-- <h4 style = "font-size: 20px;
-        font-family: Montserrat; text-align: center;">{% blocktrans with site.name as site_name %}Please sign in with one
-        of your existing third party accounts. If you don't have an account, sign up below </h4> -->
         <div class = "container">
           
           <div style = "border: 2px solid black; text-align: center;">
-            <div style="margin: 15px 15px 15px 15px;">
+            <div style="margin: 15px 15px 15px 15px; vertical-align: middle;">
               <h2 style = "font-size: 25px;">Student Login</h2>
               <center>
-              <h4 style = "font-family: Montserrat; font-size: 20px; font-weight: bold;"> If you don't have an account {% endblocktrans %}</h4>
-              <button class = "btn btn-dark btn-lg"> <a style = "text-decoration: none; color: inherit;color: white; font-weight: bold;" href="{{ signup_url }}">Sign Up</a></button>
-              <br>
-              <br>
-              <h4 style = "font-family: Montserrat;font-size: 20px; font-weight: bold;"> Or, login with Google</h4>
-              <!-- <h4 style = "font-family: Montserrat; text-align: center;font-size: 20px">Sign in using {% include "socialaccount/snippets/provider_list.html" with process="login" %} </h4> -->
+              <h5 style = "font-family: Montserrat;font-size: 20px; font-weight: bold;"> Login with Google</h5>
               <button class = "btn btn-dark btn-lg"> <a style = "text-decoration: none; color: inherit;color: white; font-weight: bold;" href="/accounts/google/login/?process=login">Google</a></button>
-              <!-- <br>
-              <h4 style = "font-family: Montserrat; text-align: center;font-size: 20px"> Or you can login below </h4>-->
-              <!-- <div class="login-or">{% trans 'or' %}</div> -->
             </center>
             </div>
           </div>
@@ -101,6 +90,9 @@
           <div style = "border: 2px solid black; margin-top: 50px; text-align: center;">
             <div style="margin: 15px 15px 15px 15px;">
               <h3 style = "font-weight: bolder; font-size: 25px;">Advisor Login</h3>
+              <h4 style = "font-family: Montserrat; font-size: 20px; font-weight: bold; margin-top: 10px; margin-bottom: 15px;"> If you don't have an account</h4>
+              <button class = "btn btn-dark btn-lg"> <a style = "text-decoration: none; color: inherit;color: white; font-weight: bold;" href="{{ signup_url }}">Sign Up</a></button>
+              <h4 style = "font-family: Montserrat;font-size: 20px; font-weight: bold;margin-top: 25px;"> Or, log in with credentials</h4>
                 <form class="login" method="POST" style = "font-family: Montserrat; text-align: center; font-size: 20px;margin-top: 4px;"{% url 'account_login' %}>
                   {% csrf_token %}
                   {{ form.as_p }}
@@ -110,7 +102,7 @@
                   <a class="button secondaryAction" href = {% url 'account_reset_password' %} > {% trans "Forgot Password?" %}</a>
                   <br>
                   <br>
-                  <button class="btn btn-dark btn-lg" type="submit" style = "text-decoration: none; color: inherit;color: white; font-weight: bold;">{% trans "Sign In" %}</button>
+                  <button class="btn btn-dark btn-lg" type="submit" style = "text-decoration: none; color: inherit;color: white; font-weight: bold;">{% trans "Log In" %}</button>
                   
                 </form>
                 {% include "socialaccount/snippets/login_extra.html" %}
