--- a/myapp/templates/myapp/calendar.html
+++ b/myapp/templates/myapp/calendar.html
@@ -169,7 +169,7 @@
   </center>
   {% if courses_in_calendar|length == 0 %}
     <br>
-    <center><h4>You have no courses in your Calendar</h4></center>
+    <center><h4 style="font-weight: bold;">You have no courses in your Calendar</h4></center>
     <br>
   {% else %}
     <table style="border-collapse: collapse;
