--- a/myapp/templates/myapp/shoppingCart.html
+++ b/myapp/templates/myapp/shoppingCart.html
@@ -80,7 +80,7 @@
     min-width: 400px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);">
         <thead>
-        <tr class = "title-row" style = "background-color: black;
+        <tr class = "title-row" style = "background-color: rgb(79, 78, 78);
         color: #ffffff;
         text-align: center;">
           <div class = "row"> 
