--- a/myapp/templates/myapp/courses.html
+++ b/myapp/templates/myapp/courses.html
@@ -194,7 +194,16 @@
     {% endwith %}
     <button type="submit">Submit</button>
   </form>
+
+  <form action="{% url 'api_data' %}" method="get">
+    {%csrf_token%}
+    </select>
+    <input type="text" name ="query" id="query" placeholder="Search courses..."> <!-- Add the search input field -->
+    <button type="submit">Submit</button>
+  </form>
 </center>
+
+
   <br>
   <table style="width:100%">
     <tr class = "title-row">
