--- a/myapp/templates/myapp/profile.html
+++ b/myapp/templates/myapp/profile.html
@@ -14,6 +14,7 @@
 <head>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Merriweather:wght@900&family=Montserrat:wght@200&family=Roboto:ital,wght@1,300&family=Sacramento&display=swap">
   <link rel="stylesheet" href="{% static 'myapp/style.css' %}">
+  <script src="https://use.fontawesome.com/releases/v6.1.1/js/all.js"></script>
   <style>
     *{
       font-family: 'Montserrat';
@@ -33,6 +34,15 @@
         <h1 id = "welcomeMessageHeader">Welcome Student: {{user.first_name}} {{user.last_name}}</h1>
       {% endif %}
       <br>
+      <!-- {% if usersSchedule is None %}
+      <h4 style="font-weight: bold;">Status: Schedule Not Submitted <i class="fa-light fa-memo-circle-check" style="color: #07cf1f;"></i></h4>
+      {% elif usersSchedule.isRejected%}
+        <h4 style="font-weight: bold;">Status: Rejected By Advisor <i class="fa-regular fa-circle-xmark" style="color: #ec1349;"></i></h4>
+      {% elif usersSchedule.status %}
+        <h4 style="font-weight: bold;">Status: Approved By Advisor <i class="fa-solid fa-square-check" style="color: #46b458;"></i></h4>
+      {% else %}
+        <h4 style="font-weight: bold;">Status: Pending(Waiting On Advisor)<i class="fa-regular fa-hourglass" style="color: #e0d900;"></i></h4>
+      {% endif %} -->
       <div class = "container">
       <h3> What do you want to do today {{user.first_name}}?</h3>
         <br>
