--- a/myapp/templates/myapp/profile.html
+++ b/myapp/templates/myapp/profile.html
@@ -45,6 +45,18 @@
       {% endif %} -->
       <div class = "container">
       <h3> What do you want to do today {{user.first_name}}?</h3>
+      <br>
+
+      {% if usersSchedule is None %}
+      <h4 style="font-weight: bold;">Start working on your schedule today! <i class="fa-light fa-memo-circle-check" style="color: #07cf1f;"></i></h4>
+      {% elif usersSchedule.isRejected%}
+        <h4 style="font-weight: bold;">Status: Rejected By Advisor <i class="fa-regular fa-circle-xmark" style="color: #ec1349;"></i></h4>
+      {% elif usersSchedule.status %}
+        <h4 style="font-weight: bold;">Status: Approved By Advisor <i class="fa-solid fa-square-check" style="color: #46b458;"></i></h4>
+      {% else %}
+        <h4 style="font-weight: bold;">Status: Pending(Waiting On Advisor)<i class="fa-regular fa-hourglass" style="color: #e0d900;"></i></h4>
+      {% endif %}
+
         <br>
         <div class = "container"> 
           <div style = "border: 2px solid black;">
