--- a/myapp/templates/account/login.html
+++ b/myapp/templates/account/login.html
@@ -82,24 +82,21 @@
           
           <div style = "border: 2px solid black; text-align: center;">
             <div style="margin: 15px 15px 15px 15px;">
+              <h2 style = "font-size: 25px;">Student Login</h2>
               <center>
               <h4 style = "font-family: Montserrat; font-size: 20px; font-weight: bold;"> If you don't have an account {% endblocktrans %}</h4>
               <button class = "btn btn-dark btn-lg"> <a style = "text-decoration: none; color: inherit;color: white; font-weight: bold;" href="{{ signup_url }}">Sign Up</a></button>
               <br>
               <br>
               <h4 style = "font-family: Montserrat;font-size: 20px; font-weight: bold;"> Or, login with Google</h4>
-              <!-- <h4 style = "font-family: Montserrat; text-align: center;font-size: 20px">Sign in using {% include "socialaccount/snippets/provider_list.html" with process="login" %} </h4> -->
               <button class = "btn btn-dark btn-lg"> <a style = "text-decoration: none; color: inherit;color: white; font-weight: bold;" href="/accounts/google/login/?process=login">Google</a></button>
-              <!-- <br>
-              <h4 style = "font-family: Montserrat; text-align: center;font-size: 20px"> Or you can login below </h4>-->
-              <!-- <div class="login-or">{% trans 'or' %}</div> -->
             </center>
             </div>
           </div>
 
           <div style = "border: 2px solid black; margin-top: 50px; text-align: center;">
             <div style="margin: 15px 15px 15px 15px;">
-              <h3 style = "font-weight: bolder; font-size: 25px;">Login</h3>
+              <h3 style = "font-weight: bolder; font-size: 25px;">Advisor Login</h3>
                 <form class="login" method="POST" style = "font-family: Montserrat; text-align: center; font-size: 20px;margin-top: 4px;"{% url 'account_login' %}>
                   {% csrf_token %}
                   {{ form.as_p }}
