--- a/myapp/templates/account/login.html
+++ b/myapp/templates/account/login.html
@@ -94,11 +94,13 @@
           <div style = "border: 2px solid black; margin-top: 50px; text-align: center;">
             <div style="margin: 15px 15px 15px 15px;">
               <h3 style = "font-weight: bolder; font-size: 25px;">Advisor Login</h3>
+              {%comment%}
               <h4 style = "font-family: Montserrat; font-size: 20px; font-weight: bold;"> If you don't have an account</h4>
               <button class = "btn btn-dark btn-lg"> <a style = "text-decoration: none; color: inherit;color: white; font-weight: bold;" href="/accounts/createAdmin">Sign Up</a></button>
               <br>
               <br>
               <h4 style = "font-family: Montserrat;font-size: 20px; font-weight: bold;"> Or, login with Credentials</h4>
+              {%endcomment%}
                 <form class="login" method="POST" style = "font-family: Montserrat; text-align: center; font-size: 20px;margin-top: 4px;"{% url 'account_login' %}>
                   {% csrf_token %}
                   {{ form.as_p }}
