--- a/myapp/templates/myapp/courses.html
+++ b/myapp/templates/myapp/courses.html
@@ -143,7 +143,7 @@
           <option value="">Time</option>
         </select>
         
-        <script>
+        <!-- <script>
           const classes = JSON.parse('{{ classes_json|safe }}');
           const startTimes = new Set();
           const endTimes = new Set();
@@ -191,7 +191,7 @@
             generateNumberOptions();
           });
         </script>
-    {% endwith %}
+    {% endwith %} -->
     <button type="submit">Submit</button>
   </form>
 </center>
