--- a/myapp/templates/myapp/calendar.html
+++ b/myapp/templates/myapp/calendar.html
@@ -244,12 +244,16 @@
   <br>
   {% if usersSchedule is None %}
     <h4 style="font-weight: bold;">Status: Schedule Not Submitted <i class="fa-light fa-memo-circle-check" style="color: #07cf1f;"></i></h4>
+    <p style = "color: gray; font-size: 10px;">Note: You can always overwrite a submission by resubmitting the form</p>
   {% elif usersSchedule.isRejected%}
     <h4 style="font-weight: bold;">Status: Rejected By Advisor <i class="fa-regular fa-circle-xmark" style="color: #ec1349;"></i></h4>
+    <p style = "color: gray; font-size: 10px;">Note: You must submit a new Schedule!</p>
   {% elif usersSchedule.status %}
     <h4 style="font-weight: bold;">Status: Approved By Advisor <i class="fa-solid fa-square-check" style="color: #46b458;"></i></h4>
+    <p style = "color: gray; font-size: 10px;">Note: Your Schedule has been approved, do not resubmit unless you need to make changes</p>
   {% else %}
     <h4 style="font-weight: bold;">Status: Pending(Waiting On Advisor)<i class="fa-regular fa-hourglass" style="color: #e0d900;"></i></h4>
+    <p style = "color: gray; font-size: 10px;">Note: Submitting multiple schedules will overwrite the original submission</p>
   {% endif %}
   <br>
   <hr>
