--- a/myapp/templates/myapp/base.html
+++ b/myapp/templates/myapp/base.html
@@ -35,7 +35,7 @@
 <header>
     <nav id = "wholeNavBar" class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a href="/"><img id = "rontundaImage" class = "image" src ="https://upload.wikimedia.org/wikipedia/commons/d/dd/University_of_Virginia_Rotunda_logo.svg"></a>
+          <a href="/accounts/profile"><img id = "rontundaImage" class = "image" src ="https://upload.wikimedia.org/wikipedia/commons/d/dd/University_of_Virginia_Rotunda_logo.svg"></a>
 
           <a id="navLogo" class="navbar-brand" style = "
           color: black; font-size: 30px; padding-left: 5px; font-weight: bolder;" href="/accounts/profile">Schedule Advisor</a>
