--- a/myapp/templates/myapp/courses.html
+++ b/myapp/templates/myapp/courses.html
@@ -129,7 +129,6 @@
         <select id ="mnemonic">
           <option value=""> Subject </option>
         </select>
-        {% with classes=classes_json|safe %}
         <select id="number">
           <option value="">Catalog Number</option>
         </select>
@@ -142,7 +141,95 @@
         <select id = "time-range">
           <option value="">Time</option>
         </select>
-        
+      <script>
+          const classes = JSON.parse('{{ classes_json|safe }}');
+          const catalogSelect = document.getElementById('number');
+          const professorSelect = document.getElementById('professor')
+          const daySelect = document.getElementById('day');
+          const timeSelect = document.getElementById('time-range');
+  
+        // Add an event listener for when the subject is changed
+        subjectSelect.addEventListener('change', () => {
+          // Clear the catalog, day, and time options
+        catalogSelect.innerHTML = '';
+        professorSelect.innerHTML
+        daySelect.innerHTML = '';
+        timeSelect.innerHTML = '';
+  
+        // Get the selected subject
+        const selectedSubject = subjectSelect.value;
+      
+        // Populate the catalog select options
+        const catalogs = [...new Set(classes.filter(c => c.course === selectedSubject).map(c => c.catalog_nbr))];
+        for (const catalog of catalogs) {
+          const option = document.createElement('option');
+          option.value = catalog;
+          option.text = catalog;
+          catalogSelect.add(option);
+        }
+      });
+      
+      // Add an event listener for when the catalog is changed
+      catalogSelect.addEventListener('change', () => {
+        // Clear the day and time options
+        professorSelect.innerHTML = '';
+        daySelect.innerHTML = '';
+        timeSelect.innerHTML = '';
+      
+        // Get the selected subject and catalog
+        const selectedSubject = subjectSelect.value;
+        const selectedCatalog = catalogSelect.value;
+      
+        const matchingProfessors = classes.filter(c => c.subject === selectedSubject && c.catalog_nbr === selectedCatalog)
+        const professors = [...new Set(matchingProfessors.map(c => c.instructors[0].name))]
+        for (const professor of professors) {
+          const option = document.createElement('option');
+          option.value = professor;
+          option.text = professor;
+          professorSelect.add(option);
+        }
+      });
+      professorSelect.addEventListener('change', () => {
+        daySelect.innerHTML = '';
+        timeSelect.innerHTML = '';
+
+        const selectedSubject = subjectSelect.value;
+        const selectedCatalog = catalogSelect.value;
+        const selectedProfessor = professorSelect.value;
+        const matchingDays = classes.filter(c => c.subject === selectedSubject && c.catalog_nbr === selectedCatalog && c.instructors[0].name === selectedProfessor);
+        // Populate the day select options
+        const days = [...new Set(matchingClasses.map(c => c.meetings[0].days))];
+        for (const day of days) {
+          const option = document.createElement('option');
+          option.value = day;
+          option.text = day;
+          daySelect.add(option);
+        }
+      });
+      
+      // Add an event listener for when the day is changed
+      daySelect.addEventListener('change', () => {
+        // Clear the time options
+        timeSelect.innerHTML = '';
+      
+        // Get the selected subject, catalog, and day
+        const selectedSubject = subjectSelect.value;
+        const selectedCatalog = catalogSelect.value;
+        const selectedProfessor = professorSelect.value;
+        const selectedDay = daySelect.value;
+      
+        // Get the classes that match the selected subject, catalog, and day
+        const matchingClasses = classes.filter(c => c.subject === selectedSubject && c.catalog_nbr === selectedCatalog && c.instructors[0].name === selectedProfessor && c.meetings[0].name === selectedDay);
+      
+        // Populate the time select options
+        for (const cls of matchingClasses) {
+          const option = document.createElement('option');
+          option.value = `${cls.meetings[1].start_time} - ${cls.meetings[1].end_time}`;
+          option.text = `${cls.meetings[1].start_time} - ${cls.meetings[1].end_time}`;
+          timeSelect.add(option);
+        }
+        });
+      </script>
         <!-- <script>
           const classes = JSON.parse('{{ classes_json|safe }}');
           const startTimes = new Set();
@@ -190,8 +277,7 @@
           subjectSelect.addEventListener('change', () => {
             generateNumberOptions();
           });
-        </script>
-    {% endwith %} -->
+        </script> -->
     <button type="submit">Submit</button>
   </form>
 </center>
@@ -223,7 +309,7 @@
       </div>
     </tr>
     
-    {% for class_object, class in classes %}
+    {% for class_object, class in content %}
     <tr class = "main-rows">
         <div class = "row"> 
             <div class = "col col-lg-3 col-md-3 col-sm-3"> 
