--- a/myapp/templates/myapp/profile.html
+++ b/myapp/templates/myapp/profile.html
@@ -29,9 +29,9 @@
   <body class = "bannerWhiteGradient" style = "text-align: center;">
     <div id ="SignedInScreenInnerContainer" class = "container">
       {% if user.is_superuser %}
-        <h1 id = "welcomeMessageHeader">Welcome Instructor: {{user.get_username}}</h1>
+        <h1 id = "welcomeMessageHeader" style = "font-family: 'Merriweather';">Welcome Instructor: {{user.get_username}}</h1>
       {% else %}
-        <h1 id = "welcomeMessageHeader">Welcome Student: {{user.first_name}} {{user.last_name}}</h1>
+        <h1 id = "welcomeMessageHeader" style = "font-family: 'Merriweather';">Welcome Student: {{user.get_username}}</h1>
       {% endif %}
       <br>
       <!-- {% if usersSchedule is None %}
@@ -44,7 +44,7 @@
         <h4 style="font-weight: bold;">Status: Pending(Waiting On Advisor)<i class="fa-regular fa-hourglass" style="color: #e0d900;"></i></h4>
       {% endif %} -->
       <div class = "container">
-      <h3> What do you want to do today {{user.first_name}}?</h3>
+      <h3 style = "font-size: 35px; font-weight: bold"> What do you want to do today?</h3>
       <br>
 
       {% if usersSchedule is None %}
@@ -59,7 +59,8 @@
         <br>
         <div class = "container"> 
           <div style = "border: 2px solid black;">
-            <h6 style = "font-size:20px;margin-top: 15px;"> Want to Browse Courses? Click Below</h6>
+            <h6 style = "font-size:22.5px;margin-top: 15px;"> Want to Browse Courses? Click below to add to your
+            schedule today!</h6>
             <br>
             <a href="browse_courses"><button class = "btn btn-primary btn-lg" style = "margin-bottom: 15px;"> Browse Courses </button></a>
           </div>
@@ -67,7 +68,8 @@
           <br>
           <br>
           <div style = "border: 2px solid black;">
-            <h6 style = "font-size:20px; margin-top: 15px"> Want to Check Shopping Cart? Click Below</h6>
+            <h6 style = "font-size:22.5px; margin-top: 15px"> Want to Check Shopping Cart? Click below to see a 
+            list of all courses you have added so far!</h6>
             <br>
             <a href="shopping_cart"><button class = "btn btn-primary btn-lg" style = "margin-bottom: 15px;"> Go to Shopping Cart </button></a>
           </div>
@@ -75,7 +77,9 @@
           <br>
           <br>
           <div style = "border: 2px solid black;">
-            <h6 style = "font-size:20px;margin-top: 15px;"> Want to Check Your Calendar? Click Below</h6>
+            <h6 style = "font-size:22.5px;margin-top: 15px;"> Want to Check Your Calendar? Click below to see 
+            your schedule with added courses. If you think your schedule is ready, you can also send your schedule to
+          the advisor on this page.</h6>
             <br>
             <a href="calendar"><button class = "btn btn-primary btn-lg" style = "margin-bottom: 15px;"> Go to Calendar </button></a>
           </div>
