--- a/myapp/templates/myapp/courses.html
+++ b/myapp/templates/myapp/courses.html
@@ -201,7 +201,7 @@
   <form action="{% url 'api_data' %}" method="get">
     {%csrf_token%}
     </select>
-    <input type="text" name ="query" id="query" placeholder="Search courses..."> <!-- Add the search input field -->
+    <input class="form-control form-control-sm" type="text" name ="query" id="query" placeholder="Search courses..."> <!-- Add the search input field -->
     <button type="submit">Submit</button>
   </form>
 </center>
