Added approved schedule showcase to home page so user is able to see the schedule they have after it is approved.

--- a/myapp/templates/myapp/calendar.html
+++ b/myapp/templates/myapp/calendar.html
@@ -251,6 +251,7 @@
   {% elif usersSchedule.status %}
     <h4 style="font-weight: bold;">Status: Approved By Advisor <i class="fa-solid fa-square-check" style="color: #46b458;"></i></h4>
     <p style = "color: gray; font-size: 10px;">Note: Your Schedule has been approved, do not resubmit unless you need to make changes</p>
+    <p style = "color: gray; font-size: 10px;">You may view your finalized schedule on the <a href="/accounts/profile">Home Page</a></p>
   {% else %}
     <h4 style="font-weight: bold;">Status: Pending(Waiting On Advisor)<i class="fa-regular fa-hourglass" style="color: #e0d900;"></i></h4>
     <p style = "color: gray; font-size: 10px;">Note: Submitting multiple schedules will overwrite the original submission</p>
