--- a/myapp/templates/myapp/courses.html
+++ b/myapp/templates/myapp/courses.html
@@ -321,6 +321,91 @@
           option.text = `${start_time} - ${end_time}`;
           timeSelect.add(option);
         }
+        const submitBtn = document.getElementById("submit-btn");
+        submitBtn.addEventListener("click", handleFilter);
+        function handleFilter(event) {
+          event.preventDefault(); // prevent the default form submission behavior
+
+          // get the selected options from the select elements
+          const subjectSelect = document.getElementById('mnemonic')
+          const catalogSelect = document.getElementById('number');
+          const professorSelect = document.getElementById('professor')
+          const daySelect = document.getElementById('day');
+          const timeSelect = document.getElementById('time-range');
+
+          const selectedSubject = subjectSelect.value;
+          const selectedCatalog = catalogSelect.value;
+          const selectedProfessor = professorSelect.value;
+          const selectedDay = daySelect.value;
+          const selectedTime = timeSelect.value;
+
+          // filter the classes based on the selected options
+          const filteredClasses = classes.filter((classObj) => {
+            let start_time = generateStartTime(classObj);
+            let end_time = generateEndTime(classObj);
+            if (
+              (selectedCatalog === "Catalog Number" ||  selectedCatalog === classObj.catalog_nbr) && (selectedProfessor === "" || selectedProfessor 
+              === "Professors" || selectedProfessor === classObj.instructors[0].name) &&
+              (selectedDay === "" || selectedDay === "Days" || selectedDay === classObj.meetings[0].days) &&
+              (selectedTime === "" || selectedTime === "Times" ||
+                (selectedTime === `${start_time} - ${end_time}`))
+            ) {
+              return true;
+            }
+            return false;
+          });
+
+          // update the displayed classes with the filtered classes
+          const classTable = document.getElementById("class-table");
+          classTable.innerHTML = ""; // clear the current table
+
+          // Create table header row
+          const headerRow = document.createElement("tr");
+          headerRow.classList.add('title-row');
+          const headerCourseCell = document.createElement("th");
+          headerCourseCell.textContent = "Course";
+          const headerCatalogNumberCell = document.createElement("th");
+          headerCatalogNumberCell.textContent = "Catalog Number";
+          const headerProfessorCell = document.createElement("th");
+          headerProfessorCell.textContent = "Professor";
+          const headerDaysCell = document.createElement("th");
+          headerDaysCell.textContent = "Days";
+          const headerTimeCell = document.createElement("th");
+          headerTimeCell.textContent = "Time";
+          const headerAddCartCell = document.createElement("th");
+          headerAddCartCell.textContent = "Add Cart"
+          headerRow.appendChild(headerCourseCell);
+          headerRow.appendChild(headerCatalogNumberCell);
+          headerRow.appendChild(headerProfessorCell);
+          headerRow.appendChild(headerDaysCell);
+          headerRow.appendChild(headerTimeCell);
+          classTable.appendChild(headerRow);
+
+          // Create table row for each class object
+          filteredClasses.forEach((classObj) => {
+            const classRow = document.createElement("tr");
+            classRow.classList.add('main-rows');
+            const courseCell = document.createElement("td");
+            courseCell.textContent = classObj.subject;
+            const catalogNumberCell = document.createElement("td");
+            catalogNumberCell.textContent = classObj.catalog_nbr;
+            const professorCell = document.createElement("td");
+            professorCell.textContent = classObj.instructors[0].name;
+            const daysCell = document.createElement("td");
+            daysCell.textContent = classObj.meetings[0].days;
+            const timeCell = document.createElement("td");
+            const startTime = generateStartTime(classObj);
+            const endTime = generateEndTime(classObj);
+            timeCell.textContent = `${startTime}-${endTime}`;
+            const buttonCell = document.createElement("td");
+            classRow.appendChild(courseCell);
+            classRow.appendChild(catalogNumberCell);
+            classRow.appendChild(professorCell);
+            classRow.appendChild(daysCell);
+            classRow.appendChild(timeCell);
+            classTable.appendChild(classRow);
+          });
+        }
         });
       </script>
         <!-- <script>
